# legends-of-runeterra-project

./: .gitignore  README.md
legends-of-runeterra-frontweb/: package-lock.json  package.json
legends-of-runeterra-frontweb/public/: index.html
legends-of-runeterra-frontweb/src/: App.js  index.js
legends-of-runeterra-frontweb/src/components/home-button/: home-button.component.jsx  home-button.style.jsx
legends-of-runeterra-frontweb/src/components/home-cards-container/: home-cards-container.component.jsx  home-cards-container.style.jsx
legends-of-runeterra-frontweb/src/components/home-form/: home-form.component.jsx  home-form.style.jsx
legends-of-runeterra-frontweb/src/components/home-header/: home-header.component.jsx  home-header.style.jsx
legends-of-runeterra-frontweb/src/contexts/: history.context.jsx
legends-of-runeterra-frontweb/src/data/: regions-icon.json
legends-of-runeterra-history/: Cargo.toml
legends-of-runeterra-history/data/: set1-en_us.json  set2-en_us.json  set4-en_us.json  set5-en_us.json  set6-en_us.json  set7-en_us.json  set8-en_us.json
legends-of-runeterra-history/src/: lib.rs  main.rs
legends-of-runeterra-history/src/api/: mod.rs  task.rs  user_name_tag.rs
legends-of-runeterra-history/src/card_translator/: card.rs  converter.rs  mod.rs
legends-of-runeterra-history/src/deck_decoder/: card_code_and_count.rs  decoder.rs  mod.rs
legends-of-runeterra-history/src/riot_api/: game_name_request.rs  history_request.rs  match_request.rs  mod.rs  puuid_request.rs  request_error.rs
(+12 files in other folders)
