[package]
name = "legends-of-runeterra-history"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base32 = "0.4.0"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
reqwest =  { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
actix-web = "4.4.0"
derive_more = "0.99.17"
actix-cors = "0.6"